# evm-projects

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
crates/addressbook/: Cargo.toml
crates/addressbook/src/: lib.rs
crates/codex-client/src/: lib.rs  schema.graphql
crates/codex-client/src/queries/: filter_exchanges.graphql
crates/config/src/: lib.rs
crates/db/migrations/2025-02-08-102509_add_tag/: down.sql  up.sql
crates/db/migrations/2025-02-09-172107_add_base_exchanges/: down.sql  up.sql
crates/db/migrations/2025-02-10-091927_remove_active_field/: down.sql  up.sql
crates/db/src/: schema.rs
crates/db/src/models/: curve_pool.rs  erc4626_vault.rs  mod.rs  tag.rs  uni_v2_pool.rs  uni_v3_pool.rs
crates/db/src/queries/: curve_pool.rs  mod.rs  tag.rs  uni_v2_pool.rs  uni_v3_pool.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs
crates/engine/src/collectors/: block_collector.rs  mempool_collector.rs  multi_log_collector.rs
crates/engine/src/executors/: encoded_tx_executor.rs  mempool_executor.rs  mod.rs  sequence_executor.rs
crates/lifi-client/: Cargo.toml
crates/lifi-client/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/odos-client/: Cargo.toml
crates/odos-client/src/: client.rs
crates/pool-manager/: Cargo.toml
crates/pool-manager/src/: lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/contracts/src/: GetERC20TokenDataBatchRequest.sol
crates/shared/src/: bigint.rs  bridge.rs  cycle.rs  evm_helpers.rs  lend.rs  lib.rs  pool_helpers.rs  simulator_foundry.rs  simulator_revm.rs  swap.rs  token_helpers.rs  token_manager.rs  utils.rs
crates/shared/src/bindings/: geterc20tokendatabatchrequest.rs  mod.rs
crates/strategies/base-arb/: Cargo.toml
crates/strategies/base-arb/src/: state.rs  strategy.rs  types.rs
crates/strategies/generalized-arb/: Cargo.toml
crates/strategies/generalized-arb/src/: state.rs  strategy.rs  types.rs
crates/strategies/uni-tri-arb/: README.md
crates/tx-executor/contracts/script/: HelperConfig.s.sol
crates/tx-executor/contracts/src/: BatchExecutor.sol
crates/tx-executor/src/: encoder.rs  lib.rs
crates/tx-executor/src/bindings/: batchexecutor.rs  deploybatchexecutor.rs  helperconfig.rs  iaavev2pool.rs  iaerodromepool.rs  imorpho.rs  imorphobase.rs  imorphostatictyping.rs  (+10 more)
crates/tx-simulator/: Cargo.toml
crates/tx-simulator/src/: lib.rs  simulator.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  token.rs
(+27 files in other folders)
