[workspace]
members = [
    "bin/bot",
    "bin/cli",
    "crates/engine",
    "crates/strategies/*",
    "crates/amms",
    "crates/db",
    "crates/shared",
    "crates/types",
    "crates/odos-client",
    "crates/tx-executor",
    "crates/addressbook",
    "crates/provider",
    "crates/config",
    "crates/lifi-client",
    "crates/pool-manager",
    "crates/tx-simulator",
    "crates/codex-client", "crates/metadata",
]

default-members = [
    "bin/bot",
    "bin/cli",
    "crates/shared",
    "crates/db",
    "crates/engine",
    "crates/odos-client",
    "crates/tx-executor",
    "crates/addressbook",
    "crates/amms",
    "crates/provider",
]
resolver = "2"


[workspace.dependencies]
alloy = { version = "0.11.1", features = ["full", "rpc-types-debug", "rpc-types-trace", "rpc-client", "node-bindings", "json-rpc", "eips"] }
alloy-primitives = "0.8.19"
alloy-rpc-types = "0.11.1"
alloy-sol-types = "0.8.19"
alloy-consensus = "0.11.1"
alloy-provider = "0.11.1"
alloy-chains = "0.1.57"
foundry-config = "0.2.0"
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.37"
async-recursion = "1.0.5"
eyre = "0.6.10"
dotenv = "0.15.0"
once_cell = "1.19.0"


[profile.release]
panic = 'abort'

[profile.dev]
opt-level = 1          # Basic optimizations for better dev experience
debug = "full"         # Full debug info for development
incremental = true     # Faster recompilation
codegen-units = 256    # Parallel compilation
debug-assertions = true
overflow-checks = true
panic = "unwind"       # Enable stack traces
lto = false           # Faster compilation
split-debuginfo = "unpacked"  # Faster linking on some systems
rpath = false         # Don't embed library search paths
